some fixes, sidebars do not go behind toolbars

--- a/Pages/Index.razor.css
+++ b/Pages/Index.razor.css
@@ -1,17 +1,21 @@
 .page {
-    display: flex;
+    width: 100vw;
     height: 100vh;
+    overflow: hidden;
+    display: grid;
+    grid-template-rows: 50px auto;
 }
 
+.page-content {
+    grid-row: 2;
+}
 .sidebar,
 .sidebar-right {
-    width: 0;
-    height: 100%;
+    height: 95%;
     background-color: lightgray !important;
+    transition: left .3s, right .3s;
     padding: 10px;
-    transition: width 0.3s;
     position: absolute;
-    top: 0;
 }
 
 .sidebar-right {
@@ -43,6 +47,7 @@
     left: 0;
     z-index: 1;
     padding: 0 20px;
+    grid-row: 1;
 }
 
 .center-toolbar {
@@ -76,7 +81,6 @@
     background-color: dodgerblue;
     transform: rotate(90deg);
     border-radius: 50rem 50rem 0 0;
-    transition: transform 0.3s, left 0.3s, right 0.3s;
     color: white;
     z-index: 10;
 }
@@ -84,13 +88,11 @@
 .expand-button-left {
     left: 0;
     transform: translateX(-15px) rotate(90deg);
-    transition: left 0.3s;
 }
 
 .expand-button-right {
     right: 0;
     transform: translateX(15px) rotate(-90deg);
-    transition: right 0.3s;
 }
 
 .expand-button span {
@@ -103,13 +105,11 @@
 .expand-button-left span {
     left: 50%;
     transform: translate(-50%, -50%) rotate(90deg);
-    transition: left 0.3s;
 }
 
 .expand-button-right span {
     right: 50%;
     transform: translate(50%, -50%) rotate(90deg);
-    transition: right 0.3s;
 }
 
 .adarc-text {
